--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: halloween
 Type: Package
-Title: What the Package Does (Title Case)
+Title: What the Package Does (Title Case)PERRY TRY
 Version: 0.1.0
-Author: Who wrote it
+Author: Who wrote it Perry 
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
+    TRY FOR THE FIRST TIME
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0
+Imports:
+    dplyr,
+    ggplot2
